added a simple style idea

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Servisto</title>
 </head>
 <body>
-    <h1>Welcome to </h1>
+    <h1>Servisto</h1>
 
     <section class="new">
-        <p>
-            To get started with u need to create a room
-        </p>
+
+        <h2>Create a new room</h2>
 
         <input type="text" id="name" placeholder="Enter name">
 
@@ -20,6 +19,8 @@
     </section>
 
     <section class="existing">
+
+        <h2>Enter an existing room</h2>
 
         <input type="text" id="roomkey" placeholder="enter roomkey">
 
