--- a/public/create.html
+++ b/public/create.html
@@ -6,9 +6,37 @@
     <title>Servisto</title>
 </head>
 <body>
+
     <h1>Create a new room</h1>
 
-    <section class="drinks">
+    <section>
+
+        <h2>Drinks</h2>
+
+        <p>Enter all drinks</p>
+
+        <div id="drink-list"></div>
+
+        <input type="text" placeholder="Drink name">
+
+    </section>
+
+    <section>
+
+        <h2>Appetizers</h2>
+
+        <p>Enter all Appetizers</p>
+
+        <div id="appetizers-list"></div>
+
+        <input type="text" placeholder="Appetizers name">
+
+    </section>
+
+    <section>
+
+        <h2>Main dishes</h2>
+
         
     </section>
 </body>
