deleted the divider for mobile

--- a/public/create.html
+++ b/public/create.html
@@ -37,6 +37,35 @@
 
         <h2>Main dishes</h2>
 
+        <p>Enter all main dishes</p>
+
+        <div id="main-list"></div>
+
+        <input type="text" placeholder="Main dish name">
+
+    </section>
+
+    <section>
+
+        <h2>Desserts</h2>
+
+        <p>Enter all Desserts</p>
+
+        <div id="dessert-list"></div>
+
+        <input type="text" placeholder="Dessert name">
+
+    </section>
+
+    <section>
+
+        <h2>Customizeable Section</h2>
+
+        <p>Enter a name for this personalized Section</p>
+
+        <input type="text" placeholder="Section name">
+
+        <button>Create Section</button>
         
     </section>
 </body>
