--- a/public/create.html
+++ b/public/create.html
@@ -1,72 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servisto</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Servisto</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="styles/create.css">
 </head>
 <body>
-
-    <h1>Create a new room</h1>
-
-    <section>
-
-        <h2>Drinks</h2>
-
-        <p>Enter all drinks</p>
-
-        <div id="drink-list"></div>
-
-        <input type="text" placeholder="Drink name">
-
-    </section>
-
-    <section>
-
-        <h2>Appetizers</h2>
-
-        <p>Enter all Appetizers</p>
-
-        <div id="appetizers-list"></div>
-
-        <input type="text" placeholder="Appetizers name">
-
-    </section>
-
-    <section>
-
-        <h2>Main dishes</h2>
-
-        <p>Enter all main dishes</p>
-
-        <div id="main-list"></div>
-
-        <input type="text" placeholder="Main dish name">
-
-    </section>
-
-    <section>
-
-        <h2>Desserts</h2>
-
-        <p>Enter all Desserts</p>
-
-        <div id="dessert-list"></div>
-
-        <input type="text" placeholder="Dessert name">
-
-    </section>
-
-    <section>
-
-        <h2>Customizeable Section</h2>
-
-        <p>Enter a name for this personalized Section</p>
-
-        <input type="text" placeholder="Section name">
-
-        <button>Create Section</button>
+<div class="container">
+    <div class="main-content">
+        <div class="intro-text">
+            <h1>Create a new room</h1>
+        </div>
         
-    </section>
+        <div class="sections-wrapper">
+            <section class="section drinks">
+                <div class="section-header">
+                    <div class="section-icon"><i class="fas fa-cocktail"></i></div>
+                    <h2>Drinks</h2>
+                    <p class="section-description">Enter all drinks</p>
+                </div>
+                <div id="drink-list" class="item-list"></div>
+                <input type="text" class="form-input" placeholder="Drink name">
+                <button class="btn btn-primary">Add Drink</button>
+            </section>
+
+            <section class="section appetizers">
+                <div class="section-header">
+                    <div class="section-icon"><i class="fas fa-seedling"></i></div>
+                    <h2>Appetizers</h2>
+                    <p class="section-description">Enter all Appetizers</p>
+                </div>
+                <div id="appetizers-list" class="item-list"></div>
+                <input type="text" class="form-input" placeholder="Appetizers name">
+                <button class="btn btn-secondary">Add Appetizer</button>
+            </section>
+
+            <section class="section main-dishes">
+                <div class="section-header">
+                    <div class="section-icon"><i class="fas fa-utensils"></i></div>
+                    <h2>Main dishes</h2>
+                    <p class="section-description">Enter all main dishes</p>
+                </div>
+                <div id="main-list" class="item-list"></div>
+                <input type="text" class="form-input" placeholder="Main dish name">
+                <button class="btn btn-success">Add Main Dish</button>
+            </section>
+
+            <section class="section desserts">
+                <div class="section-header">
+                    <div class="section-icon"><i class="fas fa-birthday-cake"></i></div>
+                    <h2>Desserts</h2>
+                    <p class="section-description">Enter all Desserts</p>
+                </div>
+                <div id="dessert-list" class="item-list"></div>
+                <input type="text" class="form-input" placeholder="Dessert name">
+                <button class="btn btn-pink">Add Dessert</button>
+            </section>
+
+            <section class="section customizable">
+                <div class="section-header">
+                    <div class="section-icon"><i class="fas fa-cog"></i></div>
+                    <h2>Customizable Section</h2>
+                    <p class="section-description">Enter a name for this personalized Section</p>
+                </div>
+                <input type="text" class="form-input" placeholder="Section name">
+                <button class="btn btn-purple">Create Section</button>
+            </section>
+        </div>
+    </div>
+</div>
 </body>
 </html>
